<resources>
    <string name="app_name">FGPartner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_login">Login</string>
    <string name="action_password">Senha</string>
    <string name="hint_password">Senha</string>
    <string name="hint_username">Username</string>


    <string name="facebook_app_id">927104604039987</string>
    <string name="loginIntro">Logue-se ou crie seu usuário aqui</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mygames">Meus Jogos</string>
    <string name="annotations">Criar Anotação</string>
    <string name="annotation_main_title">Crie suas anotações sobre suas partidas, treinos, etc, vamos acompanhando seu progresso.</string>
    <string name="hintAnnotationTitle">Titulo</string>
    <string name="annotationsDescription">Descrição</string>
    <string name="salvarAnotacao">Salvar Anotação</string>
    <string name="showListAnnotation">Mostrar minha anotações</string>
    <string name="annotationsList">Minhas Anotações</string>
    <string name="personagensSelecionaveis">Personagens Selecionáveis</string>
    <string name="topPlayers">Top Players</string>
    <string name="allGamesNav">Todos os jogos</string>


</resources>
